# uploader

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
uploader/: __init__.py  _gcs.py  _settings.py  app.py  config.py  logger.py
uploader/statics/: index.js  main.css
uploader/templates/: __init__.py  base.html  get_token.html  index.html  token.html  upload.html
