[tool.poetry]
name = "uploader"
version = "0.1.0"
description = "take control of files send to you"
authors = ["Tammo Ippen <tammo.ippen@posteo.de>"]
license = "GPL"

readme = "README.md"

repository = "https://github.com/tammoippen/plotille"
homepage = "https://github.com/tammoippen/plotille"

keywords = ['plot', 'scatter', 'histogram', 'terminal', 'braille', 'unicode', 'timeseries']

classifiers = [
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: Implementation :: CPython'
]

[tool.poetry.dependencies]
python = "^3.7"

fastapi = "^0.42.0"
uvicorn = "^0.10.8"
python-multipart = "^0.0.5"
jinja2 = "^2.10"
aiofiles = "^0.4.0"
pyjwt = {version = "^1.7",extras = ["crypto"]}
loguru = "^0.3.2"
google-cloud-storage = {version = "^1.23",optional = true}

[tool.poetry.dev-dependencies]
black = "=19.10b0"
flake8 = "^3.7"
flake8-bugbear = "^19.3.0"
flake8-commas = "^2.0"
flake8-comprehensions = "^2.1.0"
flake8-import-order = "^0.18.1"
flake8-pep3101 = "^1.2.1"
pep8-naming = "^0.8.2"

[tool.poetry.extras]
gcs = ["google-cloud-storage"]

[tool.black]
target-version = ['py37']
include = '\.pyi?$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
