[tool.poetry]
name = "uploader"
version = "0.2.0"
description = "take control of files send to you"
authors = ["Tammo Ippen <tammo.ippen@posteo.de>"]
license = "GPL"

readme = "README.md"

repository = "https://github.com/tammoippen/uploader"
homepage = "https://github.com/tammoippen/uploader"

keywords = ['upload']

classifiers = [
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: Implementation :: CPython'
]

[tool.poetry.dependencies]
python = "^3.9"

aiofiles = "~0.7.0"
fastapi = "~0.68.0"
google-cloud-storage = {version = "^1.42",optional = true}
itsdangerous = "^2.0.1"
jinja2 = "~3.0.1"
loguru = "^0.5.3"
python-multipart = "~0.0.5"
uvicorn = {version = "~0.15.0", extras= ["standard"]}

[tool.poetry.dev-dependencies]
black = "=21.7b0"
flake8 = "~3.9.2"
flake8-bugbear = "~21.4.3"
flake8-comprehensions = "~3.6.0"
flake8-import-order = "^0.18.1"
flake8-pep3101 = "~1.3.0"
pep8-naming = "~0.12.1"

[tool.poetry.extras]
gcs = ["google-cloud-storage"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
